--- a/stackup/package.json
+++ b/stackup/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "@types/node": "^7.0.8",
+    "@types/yargs": "^6.6.0",
     "async-file": "^2.0.2",
     "aws-sdk": "^2.27.0",
-    "command-line-args": "^4.0.2"
+    "yargs": "^7.0.2"
   }
 }
